# Jira_automation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  config.py  create_issues.py  jiraconvention.md  pyproject.toml  read_issues.py  search_issues.py  update_issues.py
.claude/commands/: setup.md
conventions/: default.md  ssafy-example.md  ssafy.md
docs/: reading.md  setup.md  skill-registration.md  troubleshooting.md  writing.md
jira_automation/: __init__.py  cli.py  client.py  config.py  create.py  doctor.py  link.py  search.py  update.py
legacy/: README.md
scripts/: ensure_environment.sh
